@@ -1,7 +1,0 @@
-<?php
-
-/* 
- * One row of the welcome page stock summary template
- */
-?>
-{Player}</td><td>{Cash}</td><td>{Equity}
