@@ -1,7 +1,0 @@
-<?php
-
-/* 
- * One row of the welcome page stock summary template
- */
-?>
-{Name}</td><td>{Value}
