@@ -1,5 +1,6 @@
 Date and time           Who         What was done
 ===================================================================================================
+Feb 19th, 2016 [3:38pm] Micah       Added summary tables in front page
 Feb 18th, 2016 [6:16am] Micah       Form handling for login, initial homepage setup, session data &
                                     full mock logging in functionality
 Feb 18th, 2016 [2:45am] Micah       Initial form handling tests
